ohms, degree and micro

--- a/electronicsLatex.tex
+++ b/electronicsLatex.tex
@@ -1,6 +1,6 @@
 \documentclass[leqno,b5paper]{book}
 \usepackage{./tex/khalidUrduBooksElectronics}                     %my sty file
-
+\sisetup{math-micro=\textup{µ},text-micro=µ,math-ohm  =\upOmega}   %with mathpazo this is needed else must not be here. now size of micro is smaller
 
 \input{./tex/myUrduCommandsElectronics.tex}                  %turning latex into urdu
 \input{./tex/myUrduGreek.tex}
