--- a/tex/electronicsDiode.tex
+++ b/tex/electronicsDiode.tex
@@ -47,7 +47,7 @@ i_D=I_S \left (e^{\frac{v_D}{V_T}}-1 \right )
 مندرجہ ذیل حرارت پر حرارتی برقی دباو \عددی{V_T}  کی قیمت حاصل کریں۔
 \begin{enumerate}
 \item
-پانی ابلنے کے درجہ حرارت یعنی \عددی{\SI{100}{\celsius}}  پر 
+پانی ابلنے کے درجہ حرارت یعنی \عددی{\SI{100}{\celsius}}  پر\فرہنگ{سیلسیئس}\حاشیہب{Celsius}\فرہنگ{Celsius}
 
 \item
 
@@ -1552,7 +1552,7 @@ C_j = 2 C_{j0}
 عمومی طور پر پانچ وولٹ سے کم برقی دباو پر بے قابو ہونا زینر عمل کی نشانی ہوتی ہے جبکہ سات وولٹ سے زیادہ برقی دباو پر بے قابو ہونا تودہ کے عمل کی نشانی ہوتی ہے۔پانچ تا سات وولٹ کے مابین بے قابو ہونا زینر اور تودہ دونوں کی وجہ سے ممکن ہوتا ہے۔
 
 \جزوحصہ{زینر برقی دباو بالمقابل درجہ حرارت}
-تقریباً \عددی{\SI{6}{\volt}} زینر برقی دباو کے زینر ڈایوڈ کی زینر  برقی دباو درجہ حرارت تبدیل ہونے سے تبدیل نہیں ہوتا۔اس سے زیادہ زینر برقی دباو والے زینر ڈایوڈ کی زینر برقی دباو درجہ حرارت بڑھانے سے بڑھتا ہے جبکہ اس سے کم  زینر برقی دباو والے زینر ڈایوڈ کی زینر برقی دباو درجہ حرارت بڑھانے سے گھٹتا ہے۔یوں  تبدیلی کی عمومی شرح کو \عددی{\SI{1}{\percent \per \celsius}} لیتے ہوئے درجہ حرارت \عددی{\SI{1}{\celsius}} بڑھانے سے \عددی{\SI{7}{\volt}} زینر ڈایوڈ کی زینر برقی دباو \عددی{\SI{7.07}{\volt}} ہو جائے گا۔  
+تقریباً \عددی{\SI{6}{\volt}} زینر برقی دباو کے زینر ڈایوڈ کی زینر  برقی دباو درجہ حرارت تبدیل ہونے سے تبدیل نہیں ہوتا۔اس سے زیادہ زینر برقی دباو والے زینر ڈایوڈ کی زینر برقی دباو درجہ حرارت بڑھانے سے بڑھتا ہے جبکہ اس سے کم  زینر برقی دباو والے زینر ڈایوڈ کی زینر برقی دباو درجہ حرارت بڑھانے سے گھٹتا ہے۔یوں  برقی دباو کے تبدیلی کی عمومی شرح کو  ایک فی اکائی سیلسیئس  لیتے ہوئے درجہ حرارت \عددی{\SI{1}{\celsius}} بڑھانے سے \عددی{\SI{7}{\volt}} زینر ڈایوڈ کی زینر برقی دباو \عددی{\SI{7.07}{\volt}} ہو جائے گا۔  
 
 \حصہ{سیدھا مائل ڈایوڈ}
 	سیدھے مائل چالو حال ڈایوڈ پر شکل \حوالہ{شکل_سیدھا_مائل_ڈایوڈ}  کی مدد سے غور کرتے ہیں جہاں ڈایوڈ کو بیرونی \موٹا{پیدا کار برقی رو}\حاشیہب{current source}  کی مدد سے \عددی{I} فراہم کی گئی ہے۔بیرونی برقی رو \عددیء{I}، ڈایوڈ کے دونوں سروں پر اکثریتی چارج فراہم کرتی ہے یعنی منفی نیم موصل کو آزاد الیکٹران اور مثبت نیم موصل کو آزاد خول۔منفی نیم موصل کو فراہم کردہ آزاد الیکٹران اس جانب ویران خطے میں مثبت ایٹموں کے ساتھ مل کر انہیں غیر چارج شدہ بناتے ہیں جبکہ مثبت نیم موصل خطے میں مہیا کردہ آزاد خول اس جانب ویران خطے میں منفی ایٹموں کے ساتھ مل کر انہیں غیر چارج شدہ بناتے ہیں۔یوں ویران خطے کی لمبائی کم ہو جاتی ہے اور یہاں کی رکاوٹی برقی دباو کی قیمت بھی کم ہو جاتی ہے۔رکاوٹی برقی دباو کی قیمت کم ہونے سے نفوذی برقی رو \عددی{I_D} میں اضافہ ہوتا ہے۔کرچاف کے مساوات برائے برقی رو کے مطابق یوں
