added example on beta

--- a/electronicsLatex.tex
+++ b/electronicsLatex.tex
@@ -22,7 +22,7 @@
 \title{مماثل برقیات}
 \date{}                           %if absent gives date in arabic which is a rubbish
 
-%\makeindex
+\makeindex
 
 %====================
 
@@ -73,7 +73,7 @@
 \renewcommand*{\indexname}{فرہنگ}      %this command has to be placed right here just before printindex command
 \cleardoublepage
 \addcontentsline{toc}{chapter}{فرہنگ}
-\printindex
+%\printindex
 
 
 \end{urdufont}
