--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -342,6 +342,36 @@ V_{CE} &= V_{CC} -I_C R_C - I_E R_E\\
 گزشتہ دو مثالوں سے ظاہر ہے کہ ٹرانزسٹر کے ادوار حل کرتے ہوئے \عددی{\alpha} کی قیمت ایک (\عددی{1}) تصور کی جا سکتی ہے۔ٹرانزسٹر کے ادوار قلم و کاغذ کی مدد سے حل کرتے ہوئے عموماً ایسا ہی کیا جاتا ہے اور نتیجتاً \عددی{I_E} کی جگہ \عددی{I_C} ہی کی قیمت استعمال کی جاتی ہے۔\عددی{I_C \approx I_E} لینے کا مطلب \عددی{I_B} کو نظر انداز کرنا ہے۔
 %==========
 \ابتدا{مثال}
+شکل \حوالہ{شکل_ٹرانزسٹر_بیٹا_حصول} میں \عددیء{V_B=\SI{1.884}{\volt}} اور \عددیء{V_E=\SI{2.584}{\volt}} ہیں۔ ٹرانزسٹر کا \عددیء{\beta} حاصل کریں۔مزید \عددیء{V_C} کا بھی تخمینہ لگائیں۔
+\begin{figure}
+\centering
+\includegraphics{figBJTpnpBeta}
+\caption{ٹرانزسٹر کے $\beta$ کا حصول۔}
+\label{شکل_ٹرانزسٹر_بیٹا_حصول}
+\end{figure}
+%
+
+حل:شکل کو دیکھ کر
+\begin{align*}
+I_B&=\frac{1.884}{60000}=\SI{31.4}{\micro \ampere}\\
+I_E&=\frac{12-2.584}{10000}=\SI{0.942}{\milli \ampere}
+\end{align*}
+لکھے جا سکتے ہیں جن سے
+\begin{align*}
+\beta+1=\frac{I_E}{I_B}=\frac{\SI{0.942}{\milli \ampere}}{\SI{31.4}{\micro \ampere}}=30
+\end{align*}
+یعنی \عددیء{\beta=29} حاصل ہوتا ہے۔اس طرح
+\begin{align*}
+I_C=\beta I_B=29 \times \SI{31.4}{\micro \ampere}=\SI{0.91}{\milli \ampere}
+\end{align*}
+اور
+\begin{align*}
+V_C=0.91 \times 10^{-3} \times 14000-15=\SI{-2.26}{\volt}
+\end{align*}
+حاصل ہوتے ہیں۔
+\انتہا{مثال}
+%===========
+\ابتدا{مثال}
 شکل \حوالہ{شکل_ٹرانزسٹر__جمع_منفی_جمع_سادہ_دور} میں
 \begin{align*}
 V_{CC}&=\SI{12}{\volt} \\
