renamed optical fibre in text only

--- a/tex/electronicsDiode.tex
+++ b/tex/electronicsDiode.tex
@@ -1621,7 +1621,7 @@ C_d=\frac{I_D \tau}{V_T}
 \label{شکل_ضیائی_وابستہ_کار}
 \end{figure}
 \جزوحصہ{ضیائی ذرائع ابلاغ}
-شکل \حوالہ{شکل_ضیائی_وابستہ_کار} ب میں \موٹا{ضیائی ذرائع ابلاغ}\فرہنگ{ضیائی!ذرائع ابلاغ}\فرہنگ{optical communication}\حاشیہب{optical communication}  کا نظام دکھایا گیا ہے جس کی کارکردگی کچھ یوں ہے۔نوری ڈایوڈ اور شمسی ڈایوڈ کے مابین \موٹا{ضیائی تار}\فرہنگ{ضیائی!تار}\فرہنگ{optical cable}\حاشیہب{optical cable} یوں نسب کیا جاتا ہے کہ نوری ڈایوڈ سے خارج شعاعیں ضیائی تار میں داخل ہوں اور ضیائی تار کے دوسرے سرے سے خارج ہوتی شعاعیں شمسی ڈایوڈ پر پڑیں۔یوں ایک جانب نوری ڈایوڈ میں برقی رو گزارنے سے تار کے دوسری جانب برقی دباو حاصل ہوتا ہے۔اس نظام کو استعمال کرتے ہوئے ایک مقام سے دوسرے مقام اشارہ بھیجا جا سکتا ہے۔موجودہ نظام ابلاغ اسی پر منحصر ہے۔\موٹا{ضیائی تار}\فرہنگ{تار!ضیائی}\فرہنگ{optical cable}\حاشیہب{optical cable} ایک ایسی تار کو کہتے ہیں جس میں روشنی کے شعاع بغیر گھٹے گزرتی ہے۔ 
+شکل \حوالہ{شکل_ضیائی_وابستہ_کار} ب میں \موٹا{ضیائی ذرائع ابلاغ}\فرہنگ{ضیائی!ذرائع ابلاغ}\فرہنگ{optical communication}\حاشیہب{optical communication}  کا نظام دکھایا گیا ہے جس کی کارکردگی کچھ یوں ہے۔نوری ڈایوڈ اور شمسی ڈایوڈ کے مابین \موٹا{شیش ریشہ}\فرہنگ{ضیائی!تار}\فرہنگ{optical cable}\حاشیہب{optical cable} یوں نسب کیا جاتا ہے کہ نوری ڈایوڈ سے خارج شعاعیں شیش ریشہ میں داخل ہوں اور شیش ریشہ کے دوسرے سرے سے خارج ہوتی شعاعیں شمسی ڈایوڈ پر پڑیں۔یوں ایک جانب نوری ڈایوڈ میں برقی رو گزارنے سے تار کے دوسری جانب برقی دباو حاصل ہوتا ہے۔اس نظام کو استعمال کرتے ہوئے ایک مقام سے دوسرے مقام اشارہ بھیجا جا سکتا ہے۔موجودہ نظام ابلاغ اسی پر منحصر ہے۔\موٹا{شیش ریشہ} ایک ایسی تار کو کہتے ہیں جس میں روشنی کے شعاع بغیر گھٹے گزرتی ہے۔ 
 
 \حصہ{ڈایوڈ کے ماڈل}
 	انجنیئرنگ کے شعبے میں کسی چیز کا اصل بنانے سے پہلے اس کا ماڈل تیار کیا جاتا ہے۔ اس ماڈل پر مختلف تجربے کئے جاتے ہیں۔ ان تجربات کے نتائج کو مدِ نظر رکھتے ہوئے ڈیزائن کو بہتر بنایا جاتا ہے اور صرف اُس وقت اصل تیار کیا جاتا ہے جب ڈیزائن کامیاب ثابت ہو۔موجودہ دور میں  کمپیوٹر کا استعمال اس پہلو سے نہایت اہم ہے۔یہاں یہ بتلانا ضروری ہے کہ انجنیئرنگ مفاہمت کے بغیر، کمپیوٹر کے ماڈل استعمال کرتے کبھی بھی کوئی چیز تیار نہیں کی جا سکتی۔کمپیوٹر صرف ایک آلہ ہے اور اس سے حاصل جوابات کی اہمیت کمپیوٹر استعمال کرنے والے کی قابلیت پر منحصر ہے۔
