changed Charge and Load words

--- a/electronicsLatex.tex
+++ b/electronicsLatex.tex
@@ -8,7 +8,9 @@
 
 \graphicspath{{./fig/figFrontPage/}{./fig/figOPAMP/}{./fig/figDiode/}{./fig/figBJT/}{./fig/figFrequencyResponse/}{./fig/figDifferencePair/}{./fig/figMOSFET/}{./fig/figFeedback/}{./fig/figOscillators/}{./fig/figQuestions/}}		%paths to figures
 
-\includeonly{./tex/electronicsSymbols,./tex/electronicsPreface,./tex/prefaceFirstBook,./tex/electronicsOPAMP,./tex/electronicsDiode,./tex/electronicsBJT,./tex/electronicsMOSFET,./tex/electronicsFrequencyResponse,./tex/electronicsDifferencePair,./tex/electronicsFeedback,./tex/electronicsOscillators}  %this decides what is included
+%\includeonly{./tex/electronicsSymbols,./tex/electronicsPreface,./tex/prefaceFirstBook,./tex/electronicsOPAMP,./tex/electronicsDiode,./tex/electronicsBJT,./tex/electronicsMOSFET,./tex/electronicsFrequencyResponse,./tex/electronicsDifferencePair,./tex/electronicsFeedback,./tex/electronicsOscillators}  
+%
+\includeonly{./tex/electronicsSymbols,./tex/electronicsPreface,./tex/prefaceFirstBook,./tex/electronicsOPAMP,./tex/electronicsDiode,./tex/electronicsBJT,./tex/electronicsMOSFET,./tex/electronicsFrequencyResponse,./tex/electronicsDifferencePair,./tex/electronicsFeedback,./tex/electronicsOscillators}     %this decides what is included
 
 %\includeonly{./tex/electronicsSymbols,./tex/electronicsPreface,./tex/prefaceFirstBook}
 
