--- a/tex/electronicsFilters.tex
+++ b/tex/electronicsFilters.tex
@@ -1,7 +1,7 @@
 \حصہ{فلٹر}
-ایسا دور ہے جو کسی خاص حدود کے درمیان تعدد رکھنے والے اشارات کو گزرنے دے کو \موٹا{پٹی گزار فلٹر}\فرہنگ{فلٹر!پٹی گزار}\حاشیہب{band pass filter}\فرہنگ{filter!band pass} کہتے ہیں۔اس کے برعکس ایک ایسا دور جو کسی خاص حدود کے درمیان تعدد رکھنے والے اشارات کو روک دے اور انہیں گزرنے نہ دے کو \موٹا{پٹی روک فلٹر}\فرہنگ{فلٹر!پٹی روک}\حاشیہب{band stop filter}\فرہنگ{filter!band stop} کہتے ہیں۔شکل \حوالہ{شکل_تعددی_ردعمل_فلٹر_اقسام} الف میں پٹی گزار فلٹر، شکل-ب میں پٹی روک فلٹر، شکل-پ میں پست گزار فلٹر جبکہ شکل-ت میں بلند گزار فلٹر  کی افزائش بالمقابل تعدد  کے خط دکھائے گئے ہیں۔حقیقت میں ایسے کامل فلٹر نہیں پائے جاتے اور حقیقی  پست گزار فلٹر \عددیء{\omega_H} سے قدر بلند تعدد کے اشارات کو بھی گزارتا ہے۔فلٹر ایسے قلیوں سے حاصل کیا جاتا ہے جس کا خط شکل \حوالہ{شکل_تعددی_ردعمل_فلٹر_اقسام} کے قریب قریب ہو۔
+ایسا دور ہے جو کسی خاص حدود کے درمیان تعدد رکھنے والے اشارات کو گزرنے دے کو \اصطلاح{پٹی گزار فلٹر}\فرہنگ{فلٹر!پٹی گزار}\حاشیہب{band pass filter}\فرہنگ{filter!band pass} کہتے ہیں۔اس کے برعکس ایک ایسا دور جو کسی خاص حدود کے درمیان تعدد رکھنے والے اشارات کو روک دے اور انہیں گزرنے نہ دے کو \اصطلاح{پٹی روک فلٹر}\فرہنگ{فلٹر!پٹی روک}\حاشیہب{band stop filter}\فرہنگ{filter!band stop} کہتے ہیں۔شکل \حوالہ{شکل_تعددی_ردعمل_فلٹر_اقسام} الف میں پٹی گزار فلٹر، شکل-ب میں پٹی روک فلٹر، شکل-پ میں پست گزار فلٹر جبکہ شکل-ت میں بلند گزار فلٹر  کی افزائش بالمقابل تعدد  کے خط دکھائے گئے ہیں۔حقیقت میں ایسے کامل فلٹر نہیں پائے جاتے اور حقیقی  پست گزار فلٹر \عددیء{\omega_H} سے قدر بلند تعدد کے اشارات کو بھی گزارتا ہے۔فلٹر ایسے قلیوں سے حاصل کیا جاتا ہے جس کا خط شکل \حوالہ{شکل_تعددی_ردعمل_فلٹر_اقسام} کے قریب قریب ہو۔
 
-حسابی ایمپلیفائر استعمال کرتے ہوئے ہر قسم کے فلٹر تخلیق دئے جاتے ہیں۔ایسے فلٹروں میں \موٹا{بٹر ورت فلٹر} کا اپنا ایک مقام ہے۔آئیں اس پر غور کرتے ہیں۔ 
+حسابی ایمپلیفائر استعمال کرتے ہوئے ہر قسم کے فلٹر تخلیق دئے جاتے ہیں۔ایسے فلٹروں میں \اصطلاح{بٹر ورت فلٹر} کا اپنا ایک مقام ہے۔آئیں اس پر غور کرتے ہیں۔ 
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{filterDefinition}
@@ -19,13 +19,13 @@ s^n+c_{n-1} s^{n-1}+c_{n-2} s^{n-2}+\cdots+c_2 s^2+c_1 s+c_0
 \begin{align}\label{مساوات_تعددی_ردعمل_جفت_تسلسل}
 \left(s^2+2 \zeta_1 \omega_1 s+\omega_1^2 \right)\left(s^2+2 \zeta_2 \omega_2 s+\omega_2^2 \right) \cdots
 \end{align}
-جہاں \عددیء{\zeta_m} اور \عددیء{\omega_m} دو درجی قلیات کے مستقل ہیں۔\عددیء{\zeta_m} کو \موٹا{دھیماپن کا مستقل}\فرہنگ{مستقل!دھیماپن}\حاشیہب{damping constant}\فرہنگ{damping constant} اور \عددیء{\omega_m} کو \موٹا{آزاد قدرتی تعدد}\فرہنگ{قدرتی تعدد!آزاد}\حاشیہب{undamped natural frequency}\فرہنگ{natural frequency!undamped} کہا جاتا ہے۔طاق \عددیء{n} یعنی \عددیء{n=1,3,5,\cdots} کی صورت میں
+جہاں \عددیء{\zeta_m} اور \عددیء{\omega_m} دو درجی قلیات کے مستقل ہیں۔\عددیء{\zeta_m} کو \اصطلاح{دھیماپن کا مستقل}\فرہنگ{مستقل!دھیماپن}\حاشیہب{damping constant}\فرہنگ{damping constant} اور \عددیء{\omega_m} کو \اصطلاح{آزاد قدرتی تعدد}\فرہنگ{قدرتی تعدد!آزاد}\حاشیہب{undamped natural frequency}\فرہنگ{natural frequency!undamped} کہا جاتا ہے۔طاق \عددیء{n} یعنی \عددیء{n=1,3,5,\cdots} کی صورت میں
  \عددیء{\left(s^2+2 \zeta_m \omega_m s+\omega_m^2 \right)} طرز کے \عددیء{\tfrac{n-1}{2}} دو درجی قلیات اور ایک عدد \عددیء{\left(s+\omega_0 \right)} کو آپس میں ضرب دیتے ہوئے اسی تسلسل کو یوں لکھا جا سکتا ہے۔
 \begin{align}\label{مساوات_تعددی_ردعمل_طاق_تسلسل}
 \left(s+\omega_0 \right)\left(s^2+2 \zeta_1 \omega_1 s+\omega_1^2 \right)\left(s^2+2 \zeta_2 \omega_2 s+\omega_2^2 \right) \cdots
 \end{align}
 
-\موٹا{بٹر ورت تسلسل}\فرہنگ{بٹر ورت تسلسل}\حاشیہب{Butterworth}\فرہنگ{Butterworth} \عددیء{B_n(s)} میں مساوات \حوالہ{مساوات_تعددی_ردعمل_جفت_تسلسل} اور مساوات \حوالہ{مساوات_تعددی_ردعمل_جفت_تسلسل} میں تمام \عددیء{\omega_m} برابر ہوتے ہیں۔ایسی صورت میں تمام \عددیء{\omega_m} کو \عددیء{\omega_0} لکھتے ہوئے بٹر ورت تسلسل کو یوں لکھا جا سکتا ہے
+\اصطلاح{بٹر ورت تسلسل}\فرہنگ{بٹر ورت تسلسل}\حاشیہب{Butterworth}\فرہنگ{Butterworth} \عددیء{B_n(s)} میں مساوات \حوالہ{مساوات_تعددی_ردعمل_جفت_تسلسل} اور مساوات \حوالہ{مساوات_تعددی_ردعمل_جفت_تسلسل} میں تمام \عددیء{\omega_m} برابر ہوتے ہیں۔ایسی صورت میں تمام \عددیء{\omega_m} کو \عددیء{\omega_0} لکھتے ہوئے بٹر ورت تسلسل کو یوں لکھا جا سکتا ہے
 \begin{gather}
 \begin{aligned}\label{مساوات_تعددی_ردعمل_بٹرورت_تسلسل}
 B_n(s)&=\left(s^2+2 \zeta_1 \omega_0 s+\omega_0^2 \right)\left(s^2+2 \zeta_2 \omega_0 s+\omega_0^2 \right) \cdots\\
@@ -34,9 +34,9 @@ B_n(s)&=\left(s+\omega_0 \right)\left(s^2+2 \zeta_1 \omega_0 s+\omega_0^2 \right
 \end{gather}
 جہاں پہلی تسلسل جفت \عددیء{n} اور دوسری تسلسل طاق \عددیء{n} کے لئے ہے۔
 
-آئیں بٹر ورت تسلسل میں \عددیء{s} کی وہ قیمتیں حاصل کریں جن پر \عددیء{B_n(s)} کی قیمت صفر ہو جاتی  ہے۔\عددیء{s} کی یہ قیمتیں تسلسل کے \موٹا{صفر}\فرہنگ{صفر}\حاشیہب{zeros}\فرہنگ{zeros} کہلاتے ہیں۔
+آئیں بٹر ورت تسلسل میں \عددیء{s} کی وہ قیمتیں حاصل کریں جن پر \عددیء{B_n(s)} کی قیمت صفر ہو جاتی  ہے۔\عددیء{s} کی یہ قیمتیں تسلسل کے \اصطلاح{صفر}\فرہنگ{صفر}\حاشیہب{zeros}\فرہنگ{zeros} کہلاتے ہیں۔
 
-\عددیء{s+\omega_0=0} سے \عددیء{s=-\omega_0} حاصل ہوتا ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_تسلسل_کے_صفر} الف میں \موٹا{مخلوط سطح}\فرہنگ{مخلوط سطح}\حاشیہب{complex plane}\فرہنگ{complex plane} پر اس نقطے کو دکھایا گیا ہے۔مخلوط سطح کے افقی محور پر حقیقی اعداد جبکہ اس کے عمودی محور پر خیالی اعداد پائے جاتے ہیں۔یوں \عددیء{s=\sigma+j \omega} لکھتے ہوئے \عددیء{\sigma} کو افقی جبکہ \عددیء{j \omega} کو عمودی محور پر رکھا جائے گا۔
+\عددیء{s+\omega_0=0} سے \عددیء{s=-\omega_0} حاصل ہوتا ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_تسلسل_کے_صفر} الف میں \اصطلاح{مخلوط سطح}\فرہنگ{مخلوط سطح}\حاشیہب{complex plane}\فرہنگ{complex plane} پر اس نقطے کو دکھایا گیا ہے۔مخلوط سطح کے افقی محور پر حقیقی اعداد جبکہ اس کے عمودی محور پر خیالی اعداد پائے جاتے ہیں۔یوں \عددیء{s=\sigma+j \omega} لکھتے ہوئے \عددیء{\sigma} کو افقی جبکہ \عددیء{j \omega} کو عمودی محور پر رکھا جائے گا۔
 
 دو درجی قلیات
 \begin{align}\label{مساوات_تعددی_ردعمل_دو_درجی_عمومی_جزو}
@@ -81,9 +81,9 @@ s_m=-\zeta_m \omega_0 +j \omega_0 \sqrt{1-\zeta_m^2}= \abs {s_m} \phase \theta
 \begin{align*}
 s^2+s \zeta_m \omega_0 s+\omega_0^2=\omega_0^2 \left[\left(\frac{s}{\omega_0} \right)^2 +2 \zeta_m \left(\frac{s}{\omega_0} \right)+1\right]
 \end{align*}
-کی صورت میں لکھا جا سکتا ہے۔اگر  مساوات \حوالہ{مساوات_تعددی_ردعمل_دو_درجی_عمومی_جزو} میں \عددیء{\omega_0=1} رکھا جاتا تب شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_تسلسل_کے_صفر} پ میں دائرے کا رداس ایک کے برابر ہوتا جبکہ مساوات \حوالہ{مساوات_تعددی_ردعمل_دھیماپن_کا_حصول} اب بھی  درست ثابت ہوتا۔اکائی رداس کے اس دائرے کو \موٹا{بٹر ورت دائرہ}\فرہنگ{بٹر ورت دائرہ}\حاشیہب{Butterworth circle}\فرہنگ{Butterworth circle}  کہا جائے گا۔
+کی صورت میں لکھا جا سکتا ہے۔اگر  مساوات \حوالہ{مساوات_تعددی_ردعمل_دو_درجی_عمومی_جزو} میں \عددیء{\omega_0=1} رکھا جاتا تب شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_تسلسل_کے_صفر} پ میں دائرے کا رداس ایک کے برابر ہوتا جبکہ مساوات \حوالہ{مساوات_تعددی_ردعمل_دھیماپن_کا_حصول} اب بھی  درست ثابت ہوتا۔اکائی رداس کے اس دائرے کو \اصطلاح{بٹر ورت دائرہ}\فرہنگ{بٹر ورت دائرہ}\حاشیہب{Butterworth circle}\فرہنگ{Butterworth circle}  کہا جائے گا۔
 
-\موٹا{بٹر ورت فلٹر}\فرہنگ{فلٹر!بٹر ورت}\حاشیہب{Butterworth filter}\فرہنگ{filter!Butterworth} کا عمومی قلیہ
+\اصطلاح{بٹر ورت فلٹر}\فرہنگ{فلٹر!بٹر ورت}\حاشیہب{Butterworth filter}\فرہنگ{filter!Butterworth} کا عمومی قلیہ
 \begin{align}\label{مساوات_تعددی_ردعمل_بٹرورت_پست_گزار}
 A(s)=\frac{A_0}{B_n(s)}
 \end{align}
