--- a/tex/electronicsSymbols.tex
+++ b/tex/electronicsSymbols.tex
@@ -6,7 +6,7 @@
 
 \begin{description}
 \item
-[\عددی{V_{DD},V_{CC},V_{EE},V_{BB}}]  پیدا کار یک سمتی برقی دباو
+[\عددی{V_{DD},V_{CC},V_{EE},V_{BB}}]  منبع یک سمتی برقی دباو
 \item
 [\عددی{V_{BE}, V_{CE},I_D, I_C}] یک سمتی برقی دباو اور برقی رو  (اشارہ موجود یا عدم موجود)
 \item
@@ -55,14 +55,14 @@
 کپیسٹر & \تحریر{capacitor} \\
 امالہ & \تحریر{inductor} \\
 برقی رکاوٹ & \تحریر{impedance} \\
-پیدا کار برقی دباو & \تحریر{voltage source}\\
-پیدا کار برقی رو & \تحریر{current source} \\
-تابع پیدا کار برقی دباو & \تحریر{dependent voltage source} \\
-آزاد پیدا کار برقی دباو & \تحریر{independent voltage source} \\
+منبع برقی دباو & \تحریر{voltage source}\\
+منبع برقی رو & \تحریر{current source} \\
+تابع منبع برقی دباو & \تحریر{dependent voltage source} \\
+آزاد منبع برقی دباو & \تحریر{independent voltage source} \\
 حسابی ایمپلیفائر & \تحریر{OPAMP}\\
 تفرقی جوڑا & \تحریر{difference pair} \\
 اشارہ & \تحریر{signal} \\
-پیدا کار اشارہ & \تحریر{signal generator}\\
+منبع اشارہ & \تحریر{signal generator}\\
 تعدد & \تحریر{frequency} \\
 دو جوڑ ٹرانزسٹر & \تحریر{BJT transistor}\\
 ڈایوڈ  & \تحریر{diode}\\
