--- a/tex/electronicsOscillators.tex
+++ b/tex/electronicsOscillators.tex
@@ -1,12 +1,12 @@
 \باب{مرتعش} \شناخت{باب_مرتعش}
-گزشتہ باب میں \موٹا{منفی واپسی ادوار} پر غور کیا گیا۔اس باب میں \موٹا{مرتعش}\حاشیہب{oscillator} پر غور کیا جائے گا جو \موٹا{مثبت واپسی دور} کی ایک قسم ہے۔\موٹا{مرتعش} ایک ایسے دور کو کہتے ہیں جسے کوئی داخلی اشارہ دئے بغیر اس سے ارتعاش کرتا خارجی اشارہ حاصل کیا جاتا ہے۔آئیں مرتعش کی بنیادی کارکردگی شکل \حوالہ{شکل_بنیادی_مثبت_واپسی_دور} کی مدد سے سمجھیں۔ 
+گزشتہ باب میں \اصطلاح{منفی واپسی ادوار} پر غور کیا گیا۔اس باب میں \اصطلاح{مرتعش}\حاشیہب{oscillator} پر غور کیا جائے گا جو \اصطلاح{مثبت واپسی دور} کی ایک قسم ہے۔\اصطلاح{مرتعش} ایک ایسے دور کو کہتے ہیں جسے کوئی داخلی اشارہ دئے بغیر اس سے ارتعاش کرتا خارجی اشارہ حاصل کیا جاتا ہے۔آئیں مرتعش کی بنیادی کارکردگی شکل \حوالہ{شکل_بنیادی_مثبت_واپسی_دور} کی مدد سے سمجھیں۔ 
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{feedbackBasicPositive}
 \caption{مثبت واپسی دور}
 \label{شکل_بنیادی_مثبت_واپسی_دور}
 \end{figure}
-تصور کریں کہ ایک لمحے کے لئے اس دور کو ارتعاش کرتا داخلی اشارہ \عددیء{X_s} فراہم کرنے کے بعد \عددیء{X_s=0} کر دیا جاتا ہے۔اس طرح ایک لمحے کے لئے اس دور میں  ارتعاش کرتا خارجی اشارہ \عددیء{X_o} نمودار ہو  گا۔واپسی دور \عددیء{X_o} سے \عددیء{X_f=WX_o} پیدا کرے گا جو کہ بنیادی ایمپلیفائر کو بطور داخلی اشارہ مہیا کیا گیا ہے۔بنیادی ایمپلیفائر \عددیء{X_f} سے خارجی اشارہ \عددیء{X_o=AX_f=WAX_o} پیدا کرے گا۔یوں واپسی دور اور بنیادی ایمپلیفائر میں ایک چکر کے بعد پہلی بار نمودار ہونے والے اشارے \عددیء{X_o} کی قیمت اب \عددیء{WAX_o} ہو گی۔یہ اشارہ بھی جب واپسی دور اور بنیادی ایمپلیفائر میں ایک چکر کاٹے تو اس کی نئی قیمت \عددیء{(WA)^2 X_o} ہو جائے گی۔اسی طرح \عددیء{n} چکر کے بعد بنیادی ایمپلیفائر کا خارجی اشارہ \عددیء{(WA)^n X_o} ہو گا۔اب اگر \عددیء{WA=1} ہو تب \عددیء{n} چکر کے بعد بھی بنیادی ایمپلیفائر کا خارجی اشارہ \عددیء{1^n X_o = X_o} ہی ہو گا۔اس طرح اگرچہ اس دور کو کوئی داخلی اشارہ نہیں دیا جا رہا یہ پھر بھی ارتعاش کرتا اشارہ \عددیء{X_o} خارج کرتا رہے گا۔ایسی خوبی رکھنے والے دور کو \موٹا{مرتعش}  کہتے ہیں۔
+تصور کریں کہ ایک لمحے کے لئے اس دور کو ارتعاش کرتا داخلی اشارہ \عددیء{X_s} فراہم کرنے کے بعد \عددیء{X_s=0} کر دیا جاتا ہے۔اس طرح ایک لمحے کے لئے اس دور میں  ارتعاش کرتا خارجی اشارہ \عددیء{X_o} نمودار ہو  گا۔واپسی دور \عددیء{X_o} سے \عددیء{X_f=WX_o} پیدا کرے گا جو کہ بنیادی ایمپلیفائر کو بطور داخلی اشارہ مہیا کیا گیا ہے۔بنیادی ایمپلیفائر \عددیء{X_f} سے خارجی اشارہ \عددیء{X_o=AX_f=WAX_o} پیدا کرے گا۔یوں واپسی دور اور بنیادی ایمپلیفائر میں ایک چکر کے بعد پہلی مرتبہ نمودار ہونے والے اشارے \عددیء{X_o} کی قیمت اب \عددیء{WAX_o} ہو گی۔یہ اشارہ بھی جب واپسی دور اور بنیادی ایمپلیفائر میں ایک چکر کاٹے تو اس کی نئی قیمت \عددیء{(WA)^2 X_o} ہو جائے گی۔اسی طرح \عددیء{n} چکر کے بعد بنیادی ایمپلیفائر کا خارجی اشارہ \عددیء{(WA)^n X_o} ہو گا۔اب اگر \عددیء{WA=1} ہو تب \عددیء{n} چکر کے بعد بھی بنیادی ایمپلیفائر کا خارجی اشارہ \عددیء{1^n X_o = X_o} ہی ہو گا۔اس طرح اگرچہ اس دور کو کوئی داخلی اشارہ نہیں دیا جا رہا یہ پھر بھی ارتعاش کرتا اشارہ \عددیء{X_o} خارج کرتا رہے گا۔ایسی خوبی رکھنے والے دور کو \اصطلاح{مرتعش}  کہتے ہیں۔
 
 اس کے برعکس اگر \عددیء{WA} کی قیمت ایک (1) سے کم ہو، مثلاً \عددیء{WA=0.9} ہو، تب پہلی مرتبہ نمودار ہونے والا اشارہ \عددیء{X_o} ایک چکر کے بعد کم ہو کر \عددیء{0.9 X_o} رہ جائے گا۔دو چکر کے بعد اس کی قیمت مزید کم ہو کر \عددیء{(0.9)^2 X_o =0.81 X_o} رہ جائے گی اور یوں ہر چکر کے بعد بنیادی ایمپلیفائر کا خارجی اشارہ کم ہوتے ہوتے آخر کار صفر قیمت اختیار کر لے گا۔
 
@@ -14,7 +14,7 @@
 
 کسی بھی مرتعش میں زیادہ دیر  \عددیء{WA=1} رکھنا ممکن نہیں ہوتا۔درجہ حرارت میں تبدیلی، وقت کے ساتھ برقیاتی پرزہ جات میں تبدیلی اور ایسے دیگر  وجوہات کی بنا پر مرتعش چالو کرتے ہی \عددیء{WA \ne 1} ہو جائے گا۔اگر  \عددیء{WA < 1} ہو جائے تو ایسی صورت میں مرتعش رکھ جائے گا۔اس کے برعکس اگر \عددیء{WA} کی قیمت  \عددیء{1} سے قدرِ زیادہ ہو جائے تو ایسی صورت میں مرتعش برقرار ارتعاشی اشارہ خارج کرتا ہے۔
 
-مرتعش کے اس بنیادی اصول جسے مساوت \حوالہ{مساوات_برکہازن_کا_اصول} میں دوبارہ دکھایا گیا ہے کو \موٹا{برکہازن کا اصول}\فرہنگ{برکہازن کا اصول}\فرہنگ{Barkhausen criteria}\حاشیہب{Barkhausen criteria} کہتے ہیں۔\حاشیہد{جرمنی کے عالم طبیعیات ہائنرچ  برکہازن نے اس اصول کو پیش کیا}
+مرتعش کے اس بنیادی اصول جسے مساوت \حوالہ{مساوات_برکہازن_کا_اصول} میں دوبارہ دکھایا گیا ہے کو \اصطلاح{برکہازن کا اصول}\فرہنگ{برکہازن کا اصول}\فرہنگ{Barkhausen criteria}\حاشیہب{Barkhausen criteria} کہتے ہیں۔\حاشیہد{جرمنی کے عالم طبیعیات ہائنرچ  برکہازن نے اس اصول کو پیش کیا}
 \begin{align} \label{مساوات_برکہازن_کا_اصول}
 WA =1
 \end{align}
@@ -30,7 +30,7 @@ WA =1
 
 اب تک کی گفتگو میں خارجی اشارے کی شکل پر کسی قسم کی بحث نہیں کی گئی۔حقیقت میں مرتعش کے خارجی اشارے کی شکل کچھ بھی ہو سکتی ہے البتہ اس باب میں صرف سائن نما خارجی اشارہ پیدا کرنے والے مرتعش پر غور کیا جائے گا جن میں ٹرانزسٹر ایمپلیفائر  استعمال کرتے ہوئے واپسی اشارے کو مزاحمت، کپیسٹر، امالہ، ٹرانسفارمر وغیرہ کی مدد سے حاصل کیا جاتا ہے۔
 
-واپسی دور میں کپیسٹر اور امالہ (یعنی برقی رکاوٹ) کے استعمال سے واپس کار کے مستقل کی قیمت از خود تعدد \عددیء{\omega} پر منحصر ہوتی ہے۔یوں اس کو \عددیء{W(\omega)} لکھنا زیادہ درست ہو گا۔ایسی صورت میں \موٹا{برکہازن کا اصول}  \عددیء{\abs{W(\omega) A}=1}  عموماً کسی ایک ہی تعدد پر پورا  اترے گا۔آپ جانتے ہیں کہ کسی بھی غیر سائن نما لہر کو \موٹا{فوریئر تسلسل}\حاشیہب{fourier series} کی مدد سے لکھا جا سکتا ہے۔فوریئر تسلسل میں \عددیء{\omega_o}، \عددیء{2 \omega_o}، \عددیء{3 \omega_o}، \عددیء{\نکطےد} تعدد پر لامحدود اجزاء پائے جاتے ہیں۔چالو کرتے وقت کے برقی شور کی بھی فوریئر تسلسل لکھی جا سکتی ہے جہاں سے صاف ظاہر ہے کہ اس میں بھی تمام تعدد پائے جاتے ہیں۔مرتعش ان میں سے صرف اس تعدد پر ارتعاش کرے گا جو \موٹا{برکہازن کے اصول} پر پورا اترتا ہو۔
+واپسی دور میں کپیسٹر اور امالہ (یعنی برقی رکاوٹ) کے استعمال سے واپس کار کے مستقل کی قیمت از خود تعدد \عددیء{\omega} پر منحصر ہوتی ہے۔یوں اس کو \عددیء{W(\omega)} لکھنا زیادہ درست ہو گا۔ایسی صورت میں \اصطلاح{برکہازن کا اصول}  \عددیء{\abs{W(\omega) A}=1}  عموماً کسی ایک ہی تعدد پر پورا  اترے گا۔آپ جانتے ہیں کہ کسی بھی غیر سائن نما لہر کو \اصطلاح{فوریئر تسلسل}\حاشیہب{fourier series} کی مدد سے لکھا جا سکتا ہے۔فوریئر تسلسل میں \عددیء{\omega_o}، \عددیء{2 \omega_o}، \عددیء{3 \omega_o}، \عددیء{\نقطے} تعدد پر لامحدود اجزاء پائے جاتے ہیں۔چالو کرتے وقت کے برقی شور کی بھی فوریئر تسلسل لکھی جا سکتی ہے جہاں سے صاف ظاہر ہے کہ اس میں بھی تمام تعدد پائے جاتے ہیں۔مرتعش ان میں سے صرف اس تعدد پر ارتعاش کرے گا جو \اصطلاح{برکہازن کے اصول} پر پورا اترتا ہو۔
 
 \حصہ{مرتعش کی تخلیق}
 شکل \حوالہ{شکل_مرتعش_کی_تخلیق} الف میں بنیادی ایمپلیفائر دکھایا گیا ہے۔اس کے خارجی اشارے \عددیء{V_o} اور داخلی اشارے \عددیء{V_i} کے مابین \عددیء{\SI{180}{\degree}} کا زاویہ ہے۔اگر اسے استعمال کرتے ہوئے مرتعش تخلیق دینا ہو تو واپس کار کو مزید \عددیء{\SI{180}{\degree}} کا زاویہ پیدا کرنا ہو گا۔
@@ -61,24 +61,25 @@ WA =1
 حل:
 \عددیء{\hat{V_i} = V \phase{\SI{0}{\degree}}} لیتے ہوئے، دائرے میں برقی رو \عددیء{\hat{I}} لکھتے ہوئے کرچاف کے قانون برائے برقی دباو سے حاصل ہوتا ہے
 \begin{align*}
-\hat{I}=\frac{V \phase{\SI{0}{\degree}}}{R-\frac{j}{\omega C}}=\frac{V }{\sqrt{R^2+\frac{1}{\omega^2 C^2}}}\phase {\tan^{-1} \left(\frac{1}{\omega R C} \right)}
+\hat{I}=\frac{V \phase{\SI{0}{\degree}}}{R+\frac{1}{j\omega C}}
 \end{align*}
 اور یوں
 \begin{align*}
-\hat{V_0}= \hat{I} \times \left(\frac{-j}{\omega C} \right)=\frac{V}{\sqrt{1+R^2 \omega^2 C^2}} \phase{\tan^{-1} \left(\frac{1}{\omega R C} \right) -\SI{90}{\degree}}
+\hat{V_0}= \hat{I} \times \left(\frac{1}{j\omega C} \right)&=\frac{V\phase{0}}{1+j \omega R C}\\
+&=\frac{V}{\sqrt{1+R^2 \omega^2 C^2}} \phase{-\tan^{-1} \left(\omega R C \right)}
 \end{align*}
 جس سے داخلی اور خارجی اشارات کے مابین زاویہ
 \begin{align*}
-\phase{\theta}={\tan^{-1} \left(\frac{1}{\omega R C} \right) -\SI{90}{ \degree}}
+\phase{\theta}=-\tan^{-1} \left(\omega R C \right) 
 \end{align*}
 حاصل ہوتا ہے۔یوں
 \begin{itemize}
 \item
-$\phase{\theta}=\tan^{-1} \left(\frac{1}{2 \times \pi \times 10000 \times 0.1 \times 10^{-6}} \right)-\SI{90}{\degree}=\SI{32.142}{\degree} $
+$\phase{\theta}=-\tan^{-1} \left(-2 \times \pi \times 10000\times 1000 \times 0.1 \times 10^{-6} \right)=\SI{-81}{\degree} $
 \item
 \begin{align*}
-\tan^{-1}\left(\frac{1}{2 \times \pi \times 10000 \times R \times 0.1 \times 10^{-6}} \right)-\SI{90}{\degree}=\SI{-60}{\degree}\\
-R=\SI{257}{\ohm}
+-\tan^{-1}\left(2 \times \pi \times 10000 \times R \times 0.1 \times 10^{-6}\right)=\SI{-60}{\degree}\\
+R=\SI{276}{\ohm}
 \end{align*}
 \end{itemize}
 حاصل ہوتے ہیں۔
@@ -174,7 +175,7 @@ I_0 \left[\frac{1}{\left( \omega C R\right)^3 k }-\frac{\left(\frac{6}{k}+4 \rig
 f_0 &=\frac{1}{2 \pi C R \sqrt{6+4 k}}
 \end{aligned}
 \end{gather}
-مزاحمت-کپیسٹر مرتعش مساوات \حوالہ{مساوات_مزاحمت_کپیسٹر_مرتعش_قدرتی_تعداد_ارتعاش} میں حاصل کردہ تعدد \عددیء{f_0} پر کام کرے گا۔\عددیء{f_0} لکھتے وقت \عددیء{0} کو زیرِ نوشت لکھ کر اس بات کی یاد دہانی کرائی گئی ہے کہ یہ مرتعش کی \موٹا{قدرتی تعدد}\فرہنگ{قدرتی تعدد}\فرہنگ{تعدد!قدرتی}\حاشیہب{natural frequency} ہے۔ 
+مزاحمت-کپیسٹر مرتعش مساوات \حوالہ{مساوات_مزاحمت_کپیسٹر_مرتعش_قدرتی_تعداد_ارتعاش} میں حاصل کردہ تعدد \عددیء{f_0} پر کام کرے گا۔\عددیء{f_0} لکھتے وقت \عددیء{0} کو زیرِ نوشت لکھ کر اس بات کی یاد دہانی کرائی گئی ہے کہ یہ مرتعش کی \اصطلاح{قدرتی تعدد}\فرہنگ{قدرتی تعدد}\فرہنگ{تعدد!قدرتی}\حاشیہب{natural frequency} ہے۔ 
 
 مساوات \حوالہ{مساوات_مزاحمت_کپیسٹر_مکمل_مساوت} کے حقیقی مقداروں سے حاصل ہوتا ہے۔
 \begin{align*}
@@ -207,7 +208,7 @@ k=\frac{\sqrt{29}}{2}=\num{2.69}
 \caption{مزاحمت-کپیسٹر مرتعش کی مساوات کا حصول}
 \label{شکل_مزاحمت_کپیسٹر_مرتعش_الف}
 \end{figure}
-مرتعش ہر وقت اپنی قدرتی تعدد پر ارتعاش کرتا ہے۔یوں واپس کار کے کپیسٹر کی برقی رکاوٹ \عددیء{\frac{-j}{ \omega_0 C}} کو مساوات \حوالہ{مساوات_مزاحمت_کپیسٹر_مرتعش_قدرتی_تعداد_ارتعاش} کی مدد سے \عددیء{-j R \sqrt{6+4k}} لکھا جا سکتا ہے۔اس نتیجے کے مطابق اس برقی رکاوٹ کی قیمت \عددیء{C} کے بجائے مزاحمت \عددیء{R} پر منحصر ہے۔شکل \حوالہ{شکل_مزاحمت_کپیسٹر_مرتعش_الف} میں برقی رکاوٹ \عددیء{Z_{RC}} کی نشاندہی کی گئی ہے جو ٹرانزسٹر پر بطور برقی بار لدا ہے۔یوں \عددیء{Z_{RC}} کی قیمت بھی \عددیء{C} پر منحصر نہیں ہو گی۔اگرچہ واپس کار کے کسی بھی مزاحمت یا کپیسٹر کو تبدیل کرتے ہوئے اس مرتعش کی قدرتی تعدد تبدیل کی جا سکتی ہے، حقیقت میں عموماً وسیح حدود کے درمیان تعدد تبدیل کرنے کی خاطر تینوں کپیسٹروں کو ایک ساتھ برابر تبدیل کیا جاتا ہے۔تینوں کپیسٹر یوں تبدیل کرنے سے \عددیء{Z_{RC}} ، جو کہ بنیادی ایمپلیفائر کا بار ہے، تبدیل نہیں ہوتا اور یوں ارتعاشی لہر کا حیطہ بھی تبدیل نہیں ہوتا۔یہ مرتعش چند ہرٹز \عددیء{\si{\hertz}} سے کئی سو کلو ہرٹز  \عددیء{\si{\kilo \hertz}} تک کے ارتعاش پیدا کرنے کے لئے استعمال کیا جاتا ہے۔میگا ہرٹز \عددیء{\si{\mega \hertz}} کے حدود میں اسے دیگر اقسام کے امالہ-کپیسٹر \عددیء{LC} مرتعشوں پر فوقیت حاصل نہیں۔
+مرتعش ہر وقت اپنی قدرتی تعدد پر ارتعاش کرتا ہے۔یوں واپس کار کے کپیسٹر کی برقی رکاوٹ \عددیء{\frac{-j}{ \omega_0 C}} کو مساوات \حوالہ{مساوات_مزاحمت_کپیسٹر_مرتعش_قدرتی_تعداد_ارتعاش} کی مدد سے \عددیء{-j R \sqrt{6+4k}} لکھا جا سکتا ہے۔اس نتیجے کے مطابق اس برقی رکاوٹ کی قیمت \عددیء{C} کے بجائے مزاحمت \عددیء{R} پر منحصر ہے۔شکل \حوالہ{شکل_مزاحمت_کپیسٹر_مرتعش_الف} میں برقی رکاوٹ \عددیء{Z_{RC}} کی نشاندہی کی گئی ہے جو ٹرانزسٹر پر بطور برقی بوجھ لدا ہے۔یوں \عددیء{Z_{RC}} کی قیمت بھی \عددیء{C} پر منحصر نہیں ہو گی۔اگرچہ واپس کار کے کسی بھی مزاحمت یا کپیسٹر کو تبدیل کرتے ہوئے اس مرتعش کی قدرتی تعدد تبدیل کی جا سکتی ہے، حقیقت میں عموماً وسیح حدود کے درمیان تعدد تبدیل کرنے کی خاطر تینوں کپیسٹروں کو ایک ساتھ برابر تبدیل کیا جاتا ہے۔تینوں کپیسٹر یوں تبدیل کرنے سے \عددیء{Z_{RC}} ، جو کہ بنیادی ایمپلیفائر کا بوجھ ہے، تبدیل نہیں ہوتا اور یوں ارتعاشی لہر کا حیطہ بھی تبدیل نہیں ہوتا۔یہ مرتعش چند ہرٹز \عددیء{\si{\hertz}} سے کئی سو کلو ہرٹز  \عددیء{\si{\kilo \hertz}} تک کے ارتعاش پیدا کرنے کے لئے استعمال کیا جاتا ہے۔میگا ہرٹز \عددیء{\si{\mega \hertz}} کے حدود میں اسے دیگر اقسام کے امالہ-کپیسٹر \عددیء{LC} مرتعشوں پر فوقیت حاصل نہیں۔
 
 آئیں اب \عددیء{Z_{RC}} کی اصل قیمت حاصل کریں۔شکل سے ظاہر ہے کہ
 \begin{align*}
@@ -238,7 +239,7 @@ Z_{RC}=\frac{R}{\beta} \left[ 29+20k -j 4 k \sqrt{6+4k}\right]
 شکل \حوالہ{شکل_مزاحمت_کپیسٹر_ماسفیٹ_مرتعش} الف میں ماسفیٹ سے \عددیء{RC} مرتعش کا حصول دکھایا گیا ہے۔شکل  ب میں اسی کا مساوی دور دکھایا گیا ہے۔جیسے آپ دیکھ سکتے ہیں یہ بالکل دو جوڑ ٹرانزسٹر کے دور کے طرح کا ہی ہے۔حقیقی دور میں \عددیء{R'} کے استعمال کی ضرورت نہیں ہوتی چونکہ \عددیء{R_1} اور \عددیء{R_2} کو یوں رکھنا ممکن ہو گا کہ یہ ماسفیٹ کو یک سمتی مائل کرنے کے ساتھ ساتھ \عددیء{R=R_m} کے شرط کو بھی پورا کرے جہاں \عددیء{R_m = \frac{R_1 R_2}{R_1+R_2}} کے برابر ہے۔
 %================
 \حصہ{وائن مرتعش}
-شکل \حوالہ{شکل_مرتعش_وائن} میں \موٹا{وائن مرتعش}\فرہنگ{وائن مرتعش}\فرہنگ{مرتعش!وائن}\حاشیہب{Wien bridge oscillator}\فرہنگ{Wien bridge oscillator} دکھایا گیا ہے۔وائن مرتعش\حاشیہد{اس مرتعش کو میکس وائن نے دریافت کیا۔} پر پہلے بغیر حل کئے غور کرتے ہیں۔
+شکل \حوالہ{شکل_مرتعش_وائن} میں \اصطلاح{وائن مرتعش}\فرہنگ{وائن مرتعش}\فرہنگ{مرتعش!وائن}\حاشیہب{Wien bridge oscillator}\فرہنگ{Wien bridge oscillator} دکھایا گیا ہے۔وائن مرتعش\حاشیہد{اس مرتعش کو میکس وائن نے دریافت کیا۔} پر پہلے بغیر حل کئے غور کرتے ہیں۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{wienBridgeOscillator}
@@ -353,7 +354,7 @@ j \omega M g_m &=\frac{r+j \omega L}{r_o}+j \omega C \left(r+j \omega L \right) 
 \begin{align}
 \omega_0 = \frac{1}{\sqrt{LC}}
 \end{align}
-جہاں تقریباً کی جگہ برابر کا نشان استعمال کیا گیا ہے۔اس اتفاقی اور دلچسپ نتیجے کے مطابق یہ مرتعش متوازی جڑے \عددیء{LC} کی قدرتی تعدد پر ارتعاش کرتا ہے۔اسی نتیجے کی بنا پر اس مرتعش کو \عددیء{LC} \موٹا{ہمسُر مرتعش}\فرہنگ{ہمسر مرتعش}\فرہنگ{مرتعش!ہمسر}\فرہنگ{tuned oscillator}\حاشیہب{tuned oscillator} کہا جاتا ہے۔اس مرتعش کی تعدد کپیسٹر \عددیء{C} کی قیمت تبدیل کرتے ہوئے تبدیل کی جا سکتی ہے۔
+جہاں تقریباً کی جگہ برابر کا نشان استعمال کیا گیا ہے۔اس اتفاقی اور دلچسپ نتیجے کے مطابق یہ مرتعش متوازی جڑے \عددیء{LC} کی قدرتی تعدد پر ارتعاش کرتا ہے۔اسی نتیجے کی بنا پر اس مرتعش کو \عددیء{LC} \اصطلاح{ہمسُر مرتعش}\فرہنگ{ہمسر مرتعش}\فرہنگ{مرتعش!ہمسر}\فرہنگ{tuned oscillator}\حاشیہب{tuned oscillator} کہا جاتا ہے۔اس مرتعش کی تعدد کپیسٹر \عددیء{C} کی قیمت تبدیل کرتے ہوئے تبدیل کی جا سکتی ہے۔
 
 مساوات \حوالہ{مساوات_امالہ_کپیسٹر_مرتعش_مساوات} میں خیالی جزو حل کرتے ہوئے کم سے کم \عددیء{g_m} کی قیمت حاصل ہوتی ہے یعنی
 \begin{gather}
@@ -370,7 +371,7 @@ v_o=-g_m v_{gs} r_o
 \begin{align*}
 A_v=\frac{v_o}{v_{gs}}=-g_m r_o
 \end{align*}
-ہو گا۔لامحدود بار پر افزائش کی حتمی قیمت کو \عددیء{\mu} لکھتے ہوئے یعنی \عددیء{\mu=g_m r_o} لیتے ہوئے مساوات \حوالہ{مساوات_مرتعش_ہمسر_حقیقی_اجزاء} میں \عددیء{r_o} کی جگہ \عددیء{\frac{\mu}{g_m}} لکھتے ہوئے حل کرتے ہیں۔
+ہو گا۔لامحدود بوجھ پر افزائش کی حتمی قیمت کو \عددیء{\mu} لکھتے ہوئے یعنی \عددیء{\mu=g_m r_o} لیتے ہوئے مساوات \حوالہ{مساوات_مرتعش_ہمسر_حقیقی_اجزاء} میں \عددیء{r_o} کی جگہ \عددیء{\frac{\mu}{g_m}} لکھتے ہوئے حل کرتے ہیں۔
 \begin{align*}
 g_m M&= \frac{L}{r_o}+Cr \\
 g_m M&=\frac{L g_m}{\mu}+Cr\\
@@ -379,12 +380,12 @@ g_m&=\frac{\mu C r}{\mu M-L}
 حقیقی مرتعش کی \عددیء{g_m} اس سے زیادہ ہو گی۔
 %
 \جزوحصہ{خود-مائل دور}
-شکل \حوالہ{شکل_امالہ_کپیسٹر_مرتعش} میں \عددیء{nJFET} کے مائل ہونے پر غور کرتے ہیں۔تصور کریں کہ  مرتعش ارتعاش پذیر ہے۔ یوں مشترکہ امالہ کی وجہ سے  گیٹ پر سائن نما برقی دباو \عددیء{V_p \sin \omega t} پایا جائے گا۔\عددیء{nJFET} کے گیٹ پر جب بھی مثبت برقی دباو لاگو کی جائے یہ کسی بھی ڈایوڈ کی طرح سیدھا مائل ہو جاتا ہے۔گیٹ کا ڈایوڈ، کپیسٹر \عددیء{C_g} اور مزاحمت \عددیء{R_g} بطور چوٹی حاصل کار کردار ادا کرتے ہیں جس پر حصہ \حوالہ{حصہ_چوٹی_حاصل_کار} میں تفصیلاً غور کیا گیا ہے۔یوں کپیسٹر \عددیء{C_g} گیٹ پر پائے جانے والے سائن نما لہر کے چوٹی تک چارج ہو جائے گا یعنی اس پر \عددیء{V_p} برقی دباو پایا جائے گا۔جیسا شکل میں دکھایا گیا ہے، کپیسٹر پر برقی دباو کا مثبت سرا برقی زمین کے ساتھ جڑا ہے۔یوں گیٹ پر \عددیء{-V_p} برقی دباو پایا جائے گا جو \عددیء{nJFET} کو مائل کرتا ہے۔\عددیء{R_g} کی قیمت یوں رکھی جاتی ہے کہ  لہر کے ایک دوری عرصے میں \عددیء{C_g} پر برقی دباو برقرار رہے۔ایسا کرنے کی خاطر \عددیء{R_g C_g \gg \frac{1}{f}}  رکھا جاتا ہے جہاں \عددیء{f} لہر کی تعدد ہے۔اس مرتعش کی تعدد حاصل کرتے وقت تصور کیا گیا تھا کہ گیٹ پر برقی رو کا گزر ممکن نہیں۔یہاں ہم دیکھتے ہیں کہ \عددیء{nJFET} کو مائل کرنے کی خاطر گیٹ کے ڈایوڈ کا سیدھا مائل ہونا لازم ہے۔چونکہ لہر کی چوٹی پر نہایت کم دورانیہ کے لئے گیٹ سیدھا مائل ہوتا ہے جبکہ بقایا تمام وقت یہ الٹ مائل رہتا ہے لہٰذا گیٹ کو کھلے سرے تصور کیا جا سکتا ہے۔
+شکل \حوالہ{شکل_امالہ_کپیسٹر_مرتعش} میں \عددیء{nJFET} کے مائل ہونے پر غور کرتے ہیں۔تصور کریں کہ  مرتعش ارتعاش پذیر ہے۔ یوں مشترکہ امالہ کی وجہ سے  گیٹ پر سائن نما برقی دباو \عددیء{V_p \sin \omega t} پایا جائے گا۔\عددیء{nJFET} کے گیٹ پر جب بھی مثبت برقی دباو لاگو کی جائے یہ کسی بھی ڈایوڈ کی طرح سیدھا مائل ہو جاتا ہے۔گیٹ کا ڈایوڈ، کپیسٹر \عددیء{C_g} اور مزاحمت \عددیء{R_g} بطور چوٹی حاصل کار کردار ادا کرتے ہیں جس پر حصہ \حوالہ{حصہ_چوٹی_حاصل_کار} میں تفصیلاً غور کیا گیا ہے۔یوں کپیسٹر \عددیء{C_g} پر برقی دباو، گیٹ پر پائے جانے والے سائن نما لہر کے چوٹی برابر ہو جائے گا یعنی اس پر \عددیء{V_p} برقی دباو پایا جائے گا۔جیسا شکل میں دکھایا گیا ہے، کپیسٹر پر برقی دباو کا مثبت سرا برقی زمین کے ساتھ جڑا ہے۔یوں گیٹ پر \عددیء{-V_p} برقی دباو پایا جائے گا جو \عددیء{nJFET} کو مائل کرتا ہے۔\عددیء{R_g} کی قیمت یوں رکھی جاتی ہے کہ  لہر کے ایک دوری عرصے میں \عددیء{C_g} پر برقی دباو برقرار رہے۔ایسا کرنے کی خاطر \عددیء{R_g C_g \gg \frac{1}{f}}  رکھا جاتا ہے جہاں \عددیء{f} لہر کی تعدد ہے۔اس مرتعش کی تعدد حاصل کرتے وقت تصور کیا گیا تھا کہ گیٹ پر برقی رو کا گزر ممکن نہیں۔یہاں ہم دیکھتے ہیں کہ \عددیء{nJFET} کو مائل کرنے کی خاطر گیٹ کے ڈایوڈ کا سیدھا مائل ہونا لازم ہے۔چونکہ لہر کی چوٹی پر نہایت کم دورانیہ کے لئے گیٹ سیدھا مائل ہوتا ہے جبکہ بقایا تمام وقت یہ الٹ مائل رہتا ہے لہٰذا گیٹ کو کھلے سرے تصور کیا جا سکتا ہے۔
 
 جس لمحہ مرتعش کو برقی طاقت \عددیء{V_{DD}} مہیا کیا جائے اس لمحہ \عددیء{C_g} پر صفر برقی دباو پایا جاتا ہے۔یوں  \عددیء{nJFET} زیادہ \عددیء{i_{DS}} گزرنے دیتا ہے جس سے اس کی \عددیء{g_m} کی قیمت بھی زیادہ ہوتی ہے۔زیادہ \عددیء{g_m} کی وجہ سے دور کا ارتعاش پذیر ہونا ممکن ہوتا ہے۔تصور  کریں کہ ایسا ہی ہوتا ہے۔\عددیء{g_m} کی زیادہ قیمت کی وجہ سے ارتعاشی لہر کا حیطہ بڑھتا جاتا ہے جس سے \عددیء{C_g} پر برقی دباو \عددیء{V_p} بھی بڑھتا جاتا ہے جو کہ گیٹ کو زیادہ سے زیادہ منفی کرتے ہوئے \عددیء{i_{DS}} کی قیمت کو کم کرتا ہے۔کم \عددیء{i_{DS}} کی وجہ سے \عددیء{g_m} کی قیمت بھی کم ہوتی ہے۔آخر کار دور ایسی توازن اختیار  کر لیتا ہے جہاں ارتعاشی لہر کا حیطہ برقرار رہتا ہے۔ 
 
 \حصہ{ٹرانزسٹر ہمسُر مرتعش}
-حصہ \حوالہ{حصہ_فیٹ_ہمسر_مرتعش} میں \عددیء{nJFET} کا کم تعددی ماڈل استعمال کرتے  ہوئے مرتعش کو حل کرنا دکھایا گیا جس میں ٹرانسفارمر کو بطورِ مشترکہ امالہ تصور کیا گیا۔اس حصے میں دو جوڑ ٹرانزسٹر کا بلند تعددی ماڈل اور ٹرانسفارمر کے مساوات استعمال کرتے ہوئے \موٹا{ہمسر مرتعش}\فرہنگ{ہمسر مرتعش}\حاشیہب{tuned oscillator}\فرہنگ{tuned oscillator} کا حل دکھایا جائے گا۔ظاہر ہے  کہ فیٹ پر مبنی مرتعش کو بھی اسی طرح حل کیا جا سکتا ہے۔بلند تعدد پر ٹرانزسٹر (یا فیٹ) کے بلند تعدد ماڈل ہی سے درست جوابات حاصل ہوتے ہیں لہٰذا بلند تعدد پر چلنے والے مرتعش کو حل کرتے ہوئے ٹرانزسٹر (یا فیٹ) کا بلند تعدد ماڈل استعمال کرنا ضروری ہے۔
+حصہ \حوالہ{حصہ_فیٹ_ہمسر_مرتعش} میں \عددیء{nJFET} کا کم تعددی ماڈل استعمال کرتے  ہوئے مرتعش کو حل کرنا دکھایا گیا جس میں ٹرانسفارمر کو بطورِ مشترکہ امالہ تصور کیا گیا۔اس حصے میں دو جوڑ ٹرانزسٹر کا بلند تعددی ماڈل اور ٹرانسفارمر کے مساوات استعمال کرتے ہوئے \اصطلاح{ہمسر مرتعش}\فرہنگ{ہمسر مرتعش}\حاشیہب{tuned oscillator}\فرہنگ{tuned oscillator} کا حل دکھایا جائے گا۔ظاہر ہے  کہ فیٹ پر مبنی مرتعش کو بھی اسی طرح حل کیا جا سکتا ہے۔بلند تعدد پر ٹرانزسٹر (یا فیٹ) کے بلند تعدد ماڈل ہی سے درست جوابات حاصل ہوتے ہیں لہٰذا بلند تعدد پر چلنے والے مرتعش کو حل کرتے ہوئے ٹرانزسٹر (یا فیٹ) کا بلند تعدد ماڈل استعمال کرنا ضروری ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{transistorTunedOscillator}
@@ -399,7 +400,7 @@ g_m&=\frac{\mu C r}{\mu M-L}
 \label{شکل_ٹرانزسٹر_ہمسر_مرتعش_مساوی}
 \end{figure}
 %
-شکل \حوالہ{شکل_ٹرانزسٹر_ہمسر_مرتعش} الف میں \موٹا{ٹرانزسٹر ہمسُر مرتعش} دکھایا گیا ہے۔ٹرانزسٹر کا بلند تعددی ماڈل استعمال کرتے ہوئے شکل  ب میں اسی کا مساوی دور دکھایا گیا ہے جس میں \عددیء{C_B} اور \عددیء{C_E} کو لامحدود تصور کیا گیا ہے۔\موٹا{مسئلہ ملر}\فرہنگ{مسئلہ ملر}\فرہنگ{Miller theorem}\حاشیہب{Miller theorem} کی مدد سے \عددیء{C_{bc}} کا مساوی ملر کپیسٹر \عددیء{C_M}استعمال کرتے ہیں۔یوں \عددیء{C_{be}} اور \عددیء{C_M} متوازی جڑ جاتے ہیں۔شکل \حوالہ{شکل_ٹرانزسٹر_ہمسر_مرتعش_مساوی} الف میں ایسا دکھایا گیا ہے جہاں شکل کو قدر بہتر طرز پر بنایا گیا ہے۔ٹرانسفارمر کے \عددیء{n_1} جانب برقی رکاوٹ کا \عددیء{n_2} جانب عکس لیتے ہیں۔ایسا کرتے وقت برقی رکاوٹ کو \عددیء{\left(\frac{n_2}{n_1} \right)^2} سے ضرب دیا جاتا ہے۔یوں متوازی جڑے مزاحمت \عددیء{r_{be}} اور \عددیء{R_B} کو \عددیء{R_p} لکھتے ہوئے ٹرانسفارمر کی دوسری جانب منتقل کرتے \عددیء{R_p'} حاصل ہوتا ہے جہاں
+شکل \حوالہ{شکل_ٹرانزسٹر_ہمسر_مرتعش} الف میں \اصطلاح{ٹرانزسٹر ہمسُر مرتعش} دکھایا گیا ہے۔ٹرانزسٹر کا بلند تعددی ماڈل استعمال کرتے ہوئے شکل  ب میں اسی کا مساوی دور دکھایا گیا ہے جس میں \عددیء{C_B} اور \عددیء{C_E} کو لامحدود تصور کیا گیا ہے۔\اصطلاح{مسئلہ ملر}\فرہنگ{مسئلہ ملر}\فرہنگ{Miller theorem}\حاشیہب{Miller theorem} کی مدد سے \عددیء{C_{bc}} کا مساوی ملر کپیسٹر \عددیء{C_M}استعمال کرتے ہیں۔یوں \عددیء{C_{be}} اور \عددیء{C_M} متوازی جڑ جاتے ہیں۔شکل \حوالہ{شکل_ٹرانزسٹر_ہمسر_مرتعش_مساوی} الف میں ایسا دکھایا گیا ہے جہاں شکل کو قدر بہتر طرز پر بنایا گیا ہے۔ٹرانسفارمر کے \عددیء{n_1} جانب برقی رکاوٹ کا \عددیء{n_2} جانب عکس لیتے ہیں۔ایسا کرتے وقت برقی رکاوٹ کو \عددیء{\left(\frac{n_2}{n_1} \right)^2} سے ضرب دیا جاتا ہے۔یوں متوازی جڑے مزاحمت \عددیء{r_{be}} اور \عددیء{R_B} کو \عددیء{R_p} لکھتے ہوئے ٹرانسفارمر کی دوسری جانب منتقل کرتے \عددیء{R_p'} حاصل ہوتا ہے جہاں
 \begin{align*}
 R_p'=\left(\frac{n_2}{n_1} \right)^2 R_p
 \end{align*}
@@ -533,7 +534,7 @@ X_1+X_2+X_3=0
 \begin{align}\label{مساوات_مرتعش_عمومی_افزائش}
 A_v &=\frac{X_2}{X_1}
 \end{align}
-دیتا ہے۔مساوات \حوالہ{مساوات_مرتعش_عمومی_افزائش} مرتعش کی درکار \عددیء{A_v} دیتا ہے۔ حقیقت میں \عددیء{A_v} اس قیمت سے زیادہ رکھا جائے گا۔اس مساوات میں \عددیء{A_v} مثبت قیمت رکھتا ہے لہٰذا مساواتی نشان کے دونوں جانب مثبت قیمتیں تب ممکن ہیں جب \عددیء{X_1} اور \عددیء{X_2} کی قیمتیں بھی یا تو دونوں مثبت ہوں اور یا پھر دونوں منفی ہوں۔یعنی یا یہ دونوں امالہ ہوں یا پھر دونوں کپیسٹر۔چونکہ مساوات \حوالہ{مساوات_عمومی_مرتعش_خیالی_جزو_صفر} کے تحت \عددیء{X_1+X_2=-X_3} ہو گا لہٰذا اگر \عددیء{X_1} اور \عددیء{X_2} دونوں امالہ ہوں تب \عددیء{X_3} کپیسٹر ہو گا اور ایسی صورت میں مرتعش کو \موٹا{ہارٹلے مرتعش}\فرہنگ{ہارٹلے مرتعش}\فرہنگ{مرتعش!ہارٹلے}\فرہنگ{Hartley oscillator}\حاشیہب{Hartley oscillator} پکارتے ہیں اور اگر \عددیء{X_1} اور \عددیء{X_2} دونوں کپیسٹر ہوں تب \عددیء{X_3} امالہ ہو گا اور ایسی صورت میں اسے \موٹا{کالپٹس مرتعش}\فرہنگ{کالپٹس مرتعش}\فرہنگ{مرتعش!کالپٹس}\فرہنگ{Colpitts oscillator}\حاشیہب{Colpitts oscillator} پکارا جاتا ہے۔\حاشیہد{رالف ہارٹلے نے ہارٹلے مرتعش جبکہ ایڈون ہنری کالپٹس نے کالپٹس مرتعش کا دور دریافت کیا۔}
+دیتا ہے۔مساوات \حوالہ{مساوات_مرتعش_عمومی_افزائش} مرتعش کی درکار \عددیء{A_v} دیتا ہے۔ حقیقت میں \عددیء{A_v} اس قیمت سے زیادہ رکھا جائے گا۔اس مساوات میں \عددیء{A_v} مثبت قیمت رکھتا ہے لہٰذا مساواتی نشان کے دونوں جانب مثبت قیمتیں تب ممکن ہیں جب \عددیء{X_1} اور \عددیء{X_2} کی قیمتیں بھی یا تو دونوں مثبت ہوں اور یا پھر دونوں منفی ہوں۔یعنی یا یہ دونوں امالہ ہوں یا پھر دونوں کپیسٹر۔چونکہ مساوات \حوالہ{مساوات_عمومی_مرتعش_خیالی_جزو_صفر} کے تحت \عددیء{X_1+X_2=-X_3} ہو گا لہٰذا اگر \عددیء{X_1} اور \عددیء{X_2} دونوں امالہ ہوں تب \عددیء{X_3} کپیسٹر ہو گا اور ایسی صورت میں مرتعش کو \اصطلاح{ہارٹلے مرتعش}\فرہنگ{ہارٹلے مرتعش}\فرہنگ{مرتعش!ہارٹلے}\فرہنگ{Hartley oscillator}\حاشیہب{Hartley oscillator} پکارتے ہیں اور اگر \عددیء{X_1} اور \عددیء{X_2} دونوں کپیسٹر ہوں تب \عددیء{X_3} امالہ ہو گا اور ایسی صورت میں اسے \اصطلاح{کالپٹس مرتعش}\فرہنگ{کالپٹس مرتعش}\فرہنگ{مرتعش!کالپٹس}\فرہنگ{Colpitts oscillator}\حاشیہب{Colpitts oscillator} پکارا جاتا ہے۔\حاشیہد{رالف ہارٹلے نے ہارٹلے مرتعش جبکہ ایڈون ہنری کالپٹس نے کالپٹس مرتعش کا دور دریافت کیا۔}
 
 اگر \عددیء{X_1} اور \عددیء{X_2} دونوں امالہ ہوں تب مساوات \حوالہ{مساوات_عمومی_مرتعش_خیالی_جزو_صفر} کو
 \begin{align*}
@@ -702,7 +703,7 @@ g_m R_m&=\frac{C_2}{C_1'}
 \انتہا{مثال}
 
 \جزوحصہ{قلمی مرتعش}
-ایسا قلم\حاشیہب{crystal} جسے دبانے سے اس کے دو اطراف کے مابین برقی دباو پیدا ہوتا ہے کو \موٹا{داب برقی قلم}\فرہنگ{داب برقی قلم}\فرہنگ{piezoelectric crystal}\حاشیہب{piezoelectric crystal} کہتے ہیں۔ \موٹا{داب برقی قلم} پر برقی دباو لاگو کرنے سے یہ پھیلتا (یا سکڑتا) ہے۔ایسے \موٹا{داب برقی  قلم}  کے قدرتی میکانی تعدد پر برقی دباو فراہم کرتے ہوئے اسے ارتعاش پذیر بنایا جا سکتا ہے۔قلموں کی طبیعیاتی خوبیاں انتہائی مستحکم ہوتی ہیں جو وقت یا حرارت سے بہت کم متاثر ہوتی ہیں۔اسی لئے ایسے قلم کی قدرتی تعدد کی قیمت بھی مستحکم  رہتے ہوئے تبدیل نہیں ہوتی۔اسی خوبی کی بنا پر انہیں عموماً وقت ناپنے کے لئے استعمال کیا جاتا ہے۔\موٹا{کوارٹز}\فرہنگ{کوارٹز}\فرہنگ{quartz}\حاشیہب{quartz} گھڑی کا صحیح وقت دکھانا مثالی ہے۔دھاتی ڈبے میں بند، چند کلو ہرٹز \عددیء{\si{\kilo \hertz}} سے کئی میگا ہرٹز \عددیء{\si{\mega \hertz}} تک کے قدرتی تعدد والے کوارٹز کے قلم، منڈی میں عام دستیاب ہیں۔ڈبے پر قلم کی قدرتی تعدد کی قیمت لکھی گئی ہوتی ہے۔
+ایسا قلم\حاشیہب{crystal} جسے دبانے سے اس کے دو اطراف کے مابین برقی دباو پیدا ہوتا ہے کو \اصطلاح{داب برقی قلم}\فرہنگ{داب برقی قلم}\فرہنگ{piezoelectric crystal}\حاشیہب{piezoelectric crystal} کہتے ہیں۔ \اصطلاح{داب برقی قلم} پر برقی دباو لاگو کرنے سے یہ پھیلتا (یا سکڑتا) ہے۔ایسے \اصطلاح{داب برقی  قلم}  کے قدرتی میکانی تعدد پر برقی دباو فراہم کرتے ہوئے اسے ارتعاش پذیر بنایا جا سکتا ہے۔قلموں کی طبیعیاتی خوبیاں انتہائی مستحکم ہوتی ہیں جو وقت یا حرارت سے بہت کم متاثر ہوتی ہیں۔اسی لئے ایسے قلم کی قدرتی تعدد کی قیمت بھی مستحکم  رہتے ہوئے تبدیل نہیں ہوتی۔اسی خوبی کی بنا پر انہیں عموماً وقت ناپنے کے لئے استعمال کیا جاتا ہے۔\اصطلاح{کوارٹز}\فرہنگ{کوارٹز}\فرہنگ{quartz}\حاشیہب{quartz} گھڑی کا صحیح وقت دکھانا مثالی ہے۔دھاتی ڈبے میں بند، چند کلو ہرٹز \عددیء{\si{\kilo \hertz}} سے کئی میگا ہرٹز \عددیء{\si{\mega \hertz}} تک کے قدرتی تعدد والے کوارٹز کے قلم، منڈی میں عام دستیاب ہیں۔ڈبے پر قلم کی قدرتی تعدد کی قیمت لکھی گئی ہوتی ہے۔
   
 \begin{figure}
 \centering
@@ -745,9 +746,9 @@ Z=\frac{-j \left(\omega^2 -\omega_s^2 \right)}{\omega C'  \left(\omega^2 -\omega
 \end{align}
 اس مساوات کو شکل \حوالہ{شکل_مرتعش_داب_برقی_قلم} پ میں گراف کیا گیا ہے۔حقیقت میں \عددیء{C'} کی قیمت \عددیء{C} کے قیمت سے کئی درجے زیادہ ہوتی ہے (یعنی \عددیء{C' \gg C})۔یوں \عددیء{C_m} کی قیمت \عددیء{C} سے قدر کم  ہوتا ہے جس سے \عددیء{\omega_s} کی قیمت \عددیء{\omega_m} کے قیمت سے قدر کم ہوتا ہے۔ان دو قدرتی تعدد کی قیمتوں میں \عددیء{1 \%} سے بھی کم فرق ہوتا ہے۔مساوات \حوالہ{مساوات_مرتعش_قلم_رکاوٹ} میں دیا برقی رکاوٹ \عددیء{\omega_s < \omega < \omega_m} کے حدود میں بطور امالہ جبکہ \عددیء{\omega< \omega_s} یا \عددیء{\omega>\omega_m} کے حدود میں بطور کپیسٹر  کردار ادا کرتا ہے۔
 
-مندرجہ بالا تذکرے کو مدِ نظر رکھتے ہوئے ہم دیکھتے ہیں کہ کالپٹس مرتعش میں امالہ کی جگہ قلم استعمال کیا جا سکتا ہے۔شکل \حوالہ{شکل_مرتعش_کالپٹس} میں ایسا کرتے ہوئے  شکل \حوالہ{شکل_کالپٹس_ہارٹلے_مرتعش_قلمی} الف کا \موٹا{کالپٹس قلمی مرتعش} حاصل ہوتا ہے۔چونکہ قلم صرف \عددیء{\omega_s < \omega < \omega_m} حدود میں بطور امالہ کردار ادا کرتا ہے لہٰذا ایسا مرتعش صرف اور صرف انہیں حدود کے درمیان ارتعاش پذیر رہ سکتا ہے اور اس کی تعدد انہیں حدود کے درمیان رہے گی۔آپ دیکھ سکتے ہیں کہ \موٹا{قلمی مرتعش}\فرہنگ{قلمی مرتعش}\فرہنگ{مرتعش!قلمی}\فرہنگ{crystal oscillator}\حاشیہب{crystal oscillator} کی تعدد صرف اور صرف قلم کی قدرتی تعدد پر منحصر ہے۔اب چونکہ \عددیء{\omega_s \approx \omega_m} ہوتا ہے لہٰذا حقیقت میں ایسے مرتعش کی  \عددیء{\omega \approx \omega_s \approx \omega_m} رہے گی۔چونکہ مساوات \حوالہ{مساوات_مرتعش_ٹرانزسٹر_کالپٹس_تعدد} بھی اس مرتعش کی تعدد دیتا ہے لہٰذا قلمی مرتعش اپنی تعدد \عددیء{\omega_s} اور \عددیء{\omega_m} کے درمیان اس جگہ برقرار رکھے گا جہاں مساوات \حوالہ{مساوات_مرتعش_قلم_رکاوٹ} سے حاصل قلم کی  برقی رکاوٹ (یعنی \عددیء{L}) کو استعمال کرتے ہوئے مساوات \حوالہ{مساوات_مرتعش_ٹرانزسٹر_کالپٹس_تعدد} سے بھی یہی تعدد حاصل ہو۔قلمی مرتعش کے استعمال کا مقصد ایک حتمی تعدد حاصل کرنا ہے جو قلم کو \عددیء{\omega_s \approx \omega_m} حدود میں استعمال کرتے حاصل ہوتا ہے ۔
+مندرجہ بالا تذکرے کو مدِ نظر رکھتے ہوئے ہم دیکھتے ہیں کہ کالپٹس مرتعش میں امالہ کی جگہ قلم استعمال کیا جا سکتا ہے۔شکل \حوالہ{شکل_مرتعش_کالپٹس} میں ایسا کرتے ہوئے  شکل \حوالہ{شکل_کالپٹس_ہارٹلے_مرتعش_قلمی} الف کا \اصطلاح{کالپٹس قلمی مرتعش} حاصل ہوتا ہے۔چونکہ قلم صرف \عددیء{\omega_s < \omega < \omega_m} حدود میں بطور امالہ کردار ادا کرتا ہے لہٰذا ایسا مرتعش صرف اور صرف انہیں حدود کے درمیان ارتعاش پذیر رہ سکتا ہے اور اس کی تعدد انہیں حدود کے درمیان رہے گی۔آپ دیکھ سکتے ہیں کہ \اصطلاح{قلمی مرتعش}\فرہنگ{قلمی مرتعش}\فرہنگ{مرتعش!قلمی}\فرہنگ{crystal oscillator}\حاشیہب{crystal oscillator} کی تعدد صرف اور صرف قلم کی قدرتی تعدد پر منحصر ہے۔اب چونکہ \عددیء{\omega_s \approx \omega_m} ہوتا ہے لہٰذا حقیقت میں ایسے مرتعش کی  \عددیء{\omega \approx \omega_s \approx \omega_m} رہے گی۔چونکہ مساوات \حوالہ{مساوات_مرتعش_ٹرانزسٹر_کالپٹس_تعدد} بھی اس مرتعش کی تعدد دیتا ہے لہٰذا قلمی مرتعش اپنی تعدد \عددیء{\omega_s} اور \عددیء{\omega_m} کے درمیان اس جگہ برقرار رکھے گا جہاں مساوات \حوالہ{مساوات_مرتعش_قلم_رکاوٹ} سے حاصل قلم کی  برقی رکاوٹ (یعنی \عددیء{L}) کو استعمال کرتے ہوئے مساوات \حوالہ{مساوات_مرتعش_ٹرانزسٹر_کالپٹس_تعدد} سے بھی یہی تعدد حاصل ہو۔قلمی مرتعش کے استعمال کا مقصد ایک حتمی تعدد حاصل کرنا ہے جو قلم کو \عددیء{\omega_s \approx \omega_m} حدود میں استعمال کرتے حاصل ہوتا ہے ۔
 
-شکل \حوالہ{شکل_کالپٹس_ہارٹلے_مرتعش_قلمی} ب میں قلمی ہارٹلے مرتعش دکھایا گیا ہے۔\عددیء{C'} کو نظرانداز کرتے اور قلم کو امالہ تصور کرتے ہوئے  \عددیء{L}، \عددیء{C} اور قلم  ہارٹلے مرتعش کی جانی پہچانی شکل میں جڑے ہیں۔\عددیء{C'} کی قیمت اتنی رکھی جاتی ہے کہ درکار تعدد پر متوازی جڑے \عددیء{L} اور \عددیء{C'} (جنہیں عام فہم میں \عددیء{LC} \موٹا{ٹینک}\فرہنگ{ٹینک}\فرہنگ{مرتعش!ٹینک}\فرہنگ{tank}\حاشیہب{tank} کہا جاتا ہے) کا مجموعہ امالہ کا کردار ادا کرے۔عموماً \عددیء{C'} قابل تبدیل کپیسٹر ہوتا ہے جس کی قیمت تبدیل کرتے ہوئے  مرتعش کی تعدد باریکی سے قابو کی جاتی ہے۔چونکہ متوازی جڑے \عددیء{LC} کی برقی رکاوٹ ان کے قدرتی متوازی تعدد پر لامحدود ہوتی ہے لہٰذا \عددیء{LC} ٹینک کی قدرتی متوازی تعدد کو مرتعش کے تعدد کے قریب رکھتے ہوئے  \عددیء{nJFET} کے ڈرین پر بہت زیادہ برقی رکاوٹ حاصل کیا جاتا ہے جس سے  بنیادی ایمپلیفائر کی افزائش زیادہ حاصل ہوتی ہے اور ارتعاشی اشارے کا حیطہ زیادہ سے زیادہ حاصل کرنا ممکن ہوتا ہے۔اس مرتعش میں بیرونی کپیسٹر \عددیء{C} کا استعمال ضروری نہیں۔نہایت بلند تعدد حاصل کرتے وقت اس کپیسٹر کو نسب نہیں کیا جاتا اور \عددیء{nJFET} کی اندرونی کپیسٹر \عددیء{C_{gd}} اور \عددیء{nJFET} کے ڈرین اور گیٹ کے مابین تاروں کے  مابین  بلا ارادہ پائے جانے والے کپیسٹر کو زیر استعمال لایا جاتا ہے۔
+شکل \حوالہ{شکل_کالپٹس_ہارٹلے_مرتعش_قلمی} ب میں قلمی ہارٹلے مرتعش دکھایا گیا ہے۔\عددیء{C'} کو نظرانداز کرتے اور قلم کو امالہ تصور کرتے ہوئے  \عددیء{L}، \عددیء{C} اور قلم  ہارٹلے مرتعش کی جانی پہچانی شکل میں جڑے ہیں۔\عددیء{C'} کی قیمت اتنی رکھی جاتی ہے کہ درکار تعدد پر متوازی جڑے \عددیء{L} اور \عددیء{C'} (جنہیں عام فہم میں \عددیء{LC} \اصطلاح{ٹینک}\فرہنگ{ٹینک}\فرہنگ{مرتعش!ٹینک}\فرہنگ{tank}\حاشیہب{tank} کہا جاتا ہے) کا مجموعہ امالہ کا کردار ادا کرے۔عموماً \عددیء{C'} قابل تبدیل کپیسٹر ہوتا ہے جس کی قیمت تبدیل کرتے ہوئے  مرتعش کی تعدد باریکی سے قابو کی جاتی ہے۔چونکہ متوازی جڑے \عددیء{LC} کی برقی رکاوٹ ان کے قدرتی متوازی تعدد پر لامحدود ہوتی ہے لہٰذا \عددیء{LC} ٹینک کی قدرتی متوازی تعدد کو مرتعش کے تعدد کے قریب رکھتے ہوئے  \عددیء{nJFET} کے ڈرین پر بہت زیادہ برقی رکاوٹ حاصل کیا جاتا ہے جس سے  بنیادی ایمپلیفائر کی افزائش زیادہ حاصل ہوتی ہے اور ارتعاشی اشارے کا حیطہ زیادہ سے زیادہ حاصل کرنا ممکن ہوتا ہے۔اس مرتعش میں بیرونی کپیسٹر \عددیء{C} کا استعمال ضروری نہیں۔نہایت بلند تعدد حاصل کرتے وقت اس کپیسٹر کو نسب نہیں کیا جاتا اور \عددیء{nJFET} کی اندرونی کپیسٹر \عددیء{C_{gd}} اور \عددیء{nJFET} کے ڈرین اور گیٹ کے مابین تاروں کے  مابین  بلا ارادہ پائے جانے والے کپیسٹر کو زیر استعمال لایا جاتا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{crystalColpittsHartleyOscillator}
